# argus

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  argus.env.example  pyproject.toml
scripts/: deploy.sh
src/argus/: __init__.py  changes.py  cli.py  config.py  digest.py  engine.py  etf.py  evidence.py  fields.py  gates.py  locking.py  market.py  models.py  recap.py  redact.py  report_pdf.py  scorecard.py  thesis.py
src/argus/scout/: __init__.py  criteria.py  run.py  screener.py  sectors.py
src/argus/sources/: __init__.py  base.py  edgar.py  finnhub.py  fred.py  yahoo.py
src/argus/store/: __init__.py  db.py  queries.py  schema.sql  writer.py
tests/: conftest.py  test_adapters.py  test_changes.py  test_cli.py  test_config.py  test_criteria.py  test_delivery.py  test_drift.py  test_etf.py  test_evidence.py  test_fields.py  test_gates.py  test_gates_pipeline.py  test_golden_run.py  test_lifecycle.py  test_market.py  test_models.py  test_outbox.py  test_recap.py  test_redact.py  test_regressions.py  test_render.py  test_report_pdf.py  test_scorecard.py  test_scout.py  test_screener.py  test_sectors.py  test_security_boundary.py  test_sources.py  test_store.py  test_store_io.py  test_thesis.py
tests/fixtures/: README.md
tests/fixtures/edgar/: company-tickers-synthetic.json  companyfacts-ACME-synthetic.json  form4-CF-grant-2026-05-28.xml  nport-SCHD-sample.xml
tests/fixtures/finnhub/: NVDA-quote.json  earnings-calendar-2026-07-15.json
tests/fixtures/fred/: CPIAUCSL-2026-07-15.csv
tests/golden/: README.md  digest_run2.md  scout_run2.md
(+5 files in other folders)
