[project]
name = "argus"
version = "0.1.0"
description = "Personal equity monitor + discovery tool. Watches and reports; never acts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.26.8",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "yfinance>=1.5.1",
    "httpx>=0.28.1",
]

[project.scripts]
argus = "argus.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["live: hits real external APIs; excluded by default"]
addopts = "-m 'not live'"

[tool.uv]
dev-dependencies = [
    "pytest>=9.1.1",
]
